[project]
name = "project4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control]>=1.3.0",
    "matplotlib>=3.10.9",
    "moviepy>=2.2.1",
    "numpy>=2.4.4",
    "pygame>=2.6.1",
]

[tool.uv.sources]
project4 = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/myproject"]
